# isaac

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  install.sh  pyproject.toml
isaac/: __init__.py  sdk.py
isaac/agents/: delegation.py  session.py  tools.py  toolsmith.py
isaac/apps/: compute.py  manifest.py  runner.py
isaac/cli/: dashboard.py  hatch.py  main.py  spawn.py  terminal.py  ui.py
isaac/core/: builder.py  config.py  context.py  executor.py  feedback.py  guardrails.py  harness.py  heartbeat.py  llm.py  llm_anthropic.py  llm_litellm.py  orchestrator.py  permissions.py  recovery.py  router.py  skills.py  soul.py  state.py  telemetry.py  types.py
isaac/data/skills/: bolt-on.md  (+3 more)
isaac/gateway/: base.py  telegram.py  webhook.py
isaac/mcp/: catalog.py  client.py  connections.py  connector_registry.py  credentials.py  playwright.py  plugin_server.py  rest_adapter.py  tool_loader.py  unified_server.py
isaac/memory/: autodream.py  embeddings.py  linker.py  scout.py  store.py
isaac/personal/: __init__.py  extractor.py  store.py  tools.py
isaac/plugins/: apps.py  computer_scope.py  skills.py  spreadsheet.py  workspace.py
isaac/sandbox/: __init__.py  base.py  bootstrap.py  bridge.py  e2b.py  fly.py  lifecycle.py  registry.py
isaac/tools/: computer_use.py
isaac/wiki/: __init__.py  compiler.py  ingest.py  schema.py  search.py  store.py  tools.py
tests/: test_apps.py  test_connections.py  test_core.py  test_features.py  test_harness_pillars.py  test_hatch.py  test_linker.py  test_router.py  test_spreadsheet.py  test_unified_server.py
(+3 files in other folders)
